# list_scikit

./: .gitignore  CHANGELOG.md  README.md  environment.yaml  figure.py  makefile  post.py  prepare.py  pyproject.toml  scikit_learn_related_post.md
data/: libraries.csv
list_scikit/: __init__.py  constants.py
tests/: test_constants.py
